# mhdTrader

./: .gitignore  CMakeLists.txt  main.cpp
inc/: connection.h  definition.h  postMan.h  restManager.h  restManager.h.autosave  websocketManager.h
src/: postMan.cpp  postMan.cpp.emPUbE  restManager.cpp  websocketManager.cpp
